downgrade to java 1.6