@@ -1,17 +1,16 @@
 package au.com.ds.ef;
 
-import java.util.ArrayList;
-import java.util.Arrays;
+import com.google.common.base.Function;
+import com.google.common.base.Predicate;
+import com.google.common.collect.FluentIterable;
+import com.google.common.collect.Lists;
+
 import java.util.List;
 import java.util.Set;
-import java.util.function.Supplier;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 /**
  * Constructed sub-flow, can't be reused - uniqueness of state has to be preserved.
  * Events has to be unique across all sub flows when provided as reference to ToHolder.subflow method
- *
  */
 public class IncompleteTransition extends RegularTransition {
 
@@ -20,7 +19,7 @@ public class IncompleteTransition extends RegularTransition {
      * Because creating transitions is postponed until transit method,
      * supplier function with subflows can be used as final step.
      */
-    public static class LateExecution implements Transition{
+    public static class LateExecution extends Transition {
 
         final Supplier<IncompleteTransition> factory;
 
@@ -35,7 +34,7 @@ public class IncompleteTransition extends RegularTransition {
 
         @Override
         public Transition transit(Transition... transitions) {
-            Proxy proxy = factory.get().accept(new ArrayList<>(Arrays.asList(event)));
+            Proxy proxy = factory.get().accept(Lists.newArrayList(event));
             proxy.propagateStateFrom(stateFrom);
             return proxy.transit(transitions);
         }
@@ -54,7 +53,7 @@ public class IncompleteTransition extends RegularTransition {
     /**
      * Updates all transitions on(x).to(X) with stateFrom that comes from emit(x)
      */
-    static class Proxy implements Transition {
+    static class Proxy extends Transition {
 
         private final IncompleteTransition target;
 
@@ -102,38 +101,73 @@ public class IncompleteTransition extends RegularTransition {
          * match with sub transitions (ST) by event type.
          * Update ST state-from field.
          * Remove matched TE.
-         *
+         * <p>
          * Update with From value only not overridden default transitions
          */
         @Override
-        public Transition transit(Transition... transitions) {
+        public Transition transit(final Transition... transitions) {
 
-            Repository.get().removeIf( t->t.getStateTo() == null && updateOuterTransaction(t, transitions));
+            Repository.get().removeAll(
+                    FluentIterable.from(Repository.get())
+                            .filter(new Predicate<Transition>() {
+                                @Override
+                                public boolean apply(Transition t) {
+                                    return t.getStateTo() == null && updateOuterTransaction(t, transitions);
+                                }
+                            }).toList()
+            );
 
-            if(target.defaultTransitions!=null) {
+            if (target.defaultTransitions != null) {
 
-                Set<EventEnum> targetsEvents = Repository.get().stream()
-                        .filter(t -> t.getStateFrom() == target.getStateTo())
-                        .map(t->t.getEvent())
-                        .collect(Collectors.toSet());
+                final Set<EventEnum> targetsEvents = FluentIterable.from(Repository.get())
+                        .filter(new Predicate<Transition>() {
+                            @Override
+                            public boolean apply(Transition t) {
+                                return t.getStateFrom() == target.getStateTo();
+                            }
+                        }).transform(new Function<Transition, EventEnum>() {
+                            @Override
+                            public EventEnum apply(Transition t) {
+                                return t.getEvent();
+                            }
+                        }).toSet();
 
-                target.defaultTransitions.stream()
-                        .filter(dt->targetsEvents.contains(dt.getEvent())==false)
-                        .forEach(t -> t.propagateStateFrom(target.getStateTo()));
+                FluentIterable<Transition> filtered = FluentIterable.from(target.defaultTransitions)
+                        .filter(new Predicate<Transition>() {
+                            @Override
+                            public boolean apply(Transition dt) {
+                                return !targetsEvents.contains(dt.getEvent());
+                            }
+                        });
+                for (Transition t : filtered) {
+                    t.propagateStateFrom(target.getStateTo());
+                }
             }
 
             return target;
         }
 
-        private boolean updateOuterTransaction(Transition innerT, Transition[] transitions) {
-            return Stream.of(transitions)
-                    .flatMap(t->Stream.concat(Arrays.asList(t).stream(),t.getDerivedTransitions().stream()))
-                    .filter(t -> t.getStateFrom() == null && t.getEvent() == innerT.getEvent())
-                    .findFirst()
-                    .map( t->{
-                        t.setStateFrom(innerT.getStateFrom());
-                        return true;
-                    }).orElse(Boolean.FALSE);
+        private boolean updateOuterTransaction(final Transition innerT, Transition[] transitions) {
+            return !FluentIterable.of(transitions)
+                    .transformAndConcat(new Function<Transition, Iterable<Transition>>() {
+                        @Override
+                        public Iterable<Transition> apply(Transition t) {
+                            List<Transition> list = Lists.newArrayList(t);
+                            list.addAll(t.getDerivedTransitions());
+                            return list;
+                        }
+                    }).filter(new Predicate<Transition>() {
+                        @Override
+                        public boolean apply(Transition t) {
+                            return t.getStateFrom() == null && t.getEvent() == innerT.getEvent();
+                        }
+                    }).transform(new Function<Transition, Boolean>() {
+                        @Override
+                        public Boolean apply(Transition t) {
+                            t.setStateFrom(innerT.getStateFrom());
+                            return true;
+                        }
+                    }).toList().isEmpty();
         }
     }
 
@@ -150,13 +184,17 @@ public class IncompleteTransition extends RegularTransition {
         return new IncompleteTransition(null, startState, dt);
     }
 
-    public Proxy accept(List<EventEnum> events){
+    public Proxy accept(List<EventEnum> events) {
         this.event = events.remove(0);
 
-        if(events.size()>1) {
-            this.derivedTransitions = events.stream()
-                    .map(e -> new RegularTransition(e, this.getStateTo(), this.isFinal()))
-                    .collect(Collectors.toList());
+        if (events.size() > 1) {
+            this.derivedTransitions = FluentIterable.from(events)
+                    .transform(new Function<EventEnum, Transition>() {
+                        @Override
+                        public Transition apply(EventEnum e) {
+                            return new RegularTransition(e, getStateTo(), isFinal());
+                        }
+                    }).toList();
         }
 
         return new Proxy(this);
@@ -164,6 +202,6 @@ public class IncompleteTransition extends RegularTransition {
 
     @Override
     public IncompleteTransition transit(Transition... transitions) {
-        return (IncompleteTransition)super.transit(transitions);
+        return (IncompleteTransition) super.transit(transitions);
     }
 }
