@@ -1,42 +1,53 @@
 package au.com.ds.ef;
 
+import com.google.common.base.Function;
+import com.google.common.collect.FluentIterable;
+
 import java.util.LinkedList;
 import java.util.List;
-import java.util.stream.Collectors;
 
-public class RegularTransition implements Transition{
+public class RegularTransition extends Transition {
 
     protected EventEnum event;
     private StateEnum stateFrom;
     private StateEnum stateTo;
     private boolean isFinal;
     protected List<Transition> defaultTransitions = null;
-    protected List<Transition> derivedTransitions = new LinkedList<>();
+    protected List<Transition> derivedTransitions = new LinkedList<Transition>();
 
     static RegularTransition spanTransitionTree(
-            List<EventEnum> events, StateEnum stateTo, boolean isFinal, List<Transition> dt){
+            List<EventEnum> events, StateEnum stateTo, boolean isFinal, List<Transition> dt) {
         return new RegularTransition(events, stateTo, isFinal, dt);
     }
 
-    static RegularTransition createSingleTransition(EventEnum event, StateEnum stateTo, boolean isFinal){
+    static RegularTransition createSingleTransition(EventEnum event, StateEnum stateTo, boolean isFinal) {
         return new RegularTransition(event, stateTo, isFinal);
     }
 
-    protected RegularTransition(List<EventEnum> events, StateEnum stateTo, boolean isFinal, List<Transition> dt) {
-        this.event = events!=null ? events.remove(0) : null;
+    protected RegularTransition(List<EventEnum> events, final StateEnum stateTo, final boolean isFinal, List<Transition> dt) {
+        this.event = events != null ? events.remove(0) : null;
         this.stateTo = stateTo;
         this.isFinal = isFinal;
 
-        if(dt!=null && !dt.isEmpty()){
-            this.defaultTransitions = dt.stream()
-                    .map( t-> new RegularTransition(t.getEvent(), t.getStateTo(), t.isFinal()))
-                    .collect(Collectors.toList());
+        if (dt != null && !dt.isEmpty()) {
+            this.defaultTransitions = FluentIterable.from(dt)
+                    .transform(new Function<Transition, Transition>() {
+                        @Override
+                        public Transition apply(Transition t) {
+                            return new RegularTransition(t.getEvent(), t.getStateTo(), t.isFinal());
+                        }
+                    }).toList();
         }
 
-        if(events!=null && !events.isEmpty()) {
-            this.derivedTransitions = events.stream()
-                    .map(e -> new RegularTransition(e, stateTo, isFinal))
-                    .collect(Collectors.toList());
+        if (events != null && !events.isEmpty()) {
+            this.derivedTransitions = FluentIterable.from(events)
+                    .transform(new Function<EventEnum, Transition>() {
+                        @Override
+                        public Transition apply(EventEnum e) {
+                            return new RegularTransition(e, stateTo, isFinal);
+                        }
+                    })
+                    .toList();
         }
 
         Repository.get().add(this);
@@ -50,19 +61,22 @@ public class RegularTransition implements Transition{
     }
 
     public Transition transit(Transition... transitions) {
-        TransitionUtil.composeTransitions(defaultTransitions, transitions).forEach(t -> t.propagateStateFrom(stateTo));
+        List<Transition> list = TransitionUtil.composeTransitions(defaultTransitions, transitions);
+        for (Transition t : list) {
+            t.propagateStateFrom(stateTo);
+        }
         return this;
     }
-
-    //
 
     public EventEnum getEvent() {
         return event;
     }
 
-    public void propagateStateFrom(StateEnum stateFrom) {
+    public void propagateStateFrom(final StateEnum stateFrom) {
         this.stateFrom = stateFrom;
-        this.derivedTransitions.forEach( dt->dt.propagateStateFrom(stateFrom));
+        for (Transition dt : derivedTransitions) {
+            dt.propagateStateFrom(stateFrom);
+        }
     }
 
     public void setStateFrom(StateEnum stateFrom) {
